// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions accountUpdate 1`] = `
Object {
  "type": "account",
  "value": "test",
}
`;

exports[`actions custodianUpdate 1`] = `
Object {
  "code": "custodianCode",
  "custodian": "custodian",
  "states": "custodianStates",
  "type": "custodian",
}
`;

exports[`actions ethBalanceUpdate 1`] = `
Object {
  "type": "ethBalance",
  "value": Object {
    "allowance": 789,
    "eth": 123,
    "weth": 456,
  },
}
`;

exports[`actions getAccount 1`] = `
Array [
  Object {
    "type": "account",
    "value": "0x0",
  },
]
`;

exports[`actions getCustodianBalances 1`] = `
Array [
  Object {
    "type": "ethBalance",
    "value": Object {
      "allowance": 333,
      "eth": 111,
      "weth": 222,
    },
  },
  Object {
    "code": "custodianCode",
    "custodian": "custodian",
    "states": "custodianStates",
    "type": "custodian",
  },
  Object {
    "balance": Object {
      "allowance": 333,
      "balance": 222,
    },
    "code": "code",
    "type": "tokenBalance",
  },
]
`;

exports[`actions getCustodianBalances 2`] = `
Array [
  Array [
    "0xAccount",
  ],
]
`;

exports[`actions getCustodianBalances 3`] = `
Array [
  Array [
    "WETH",
    "0xAccount",
  ],
  Array [
    "code",
    "0xAccount",
  ],
]
`;

exports[`actions getCustodianBalances 4`] = `
Array [
  Array [
    "WETH",
    "0xAccount",
  ],
  Array [
    "code",
    "0xAccount",
  ],
]
`;

exports[`actions getCustodianBalances dummy 1`] = `
Array [
  Object {
    "code": "custodianCode",
    "custodian": "custodian",
    "states": "custodianStates",
    "type": "custodian",
  },
]
`;

exports[`actions getNetwork 1`] = `
Array [
  Object {
    "type": "network",
    "value": 123,
  },
]
`;

exports[`actions networkUpdate 1`] = `
Object {
  "type": "network",
  "value": 123,
}
`;

exports[`actions refresh 1`] = `
Array [
  Object {
    "type": "network",
    "value": 123,
  },
  Object {
    "type": "account",
    "value": "0x0",
  },
  Object {
    "type": "ethBalance",
    "value": Object {
      "allowance": 333,
      "eth": 111,
      "weth": 222,
    },
  },
  Object {
    "code": "custodianCode",
    "custodian": "custodian",
    "states": "custodianStates",
    "type": "custodian",
  },
  Object {
    "balance": Object {
      "allowance": 333,
      "balance": 222,
    },
    "code": "code",
    "type": "tokenBalance",
  },
]
`;

exports[`actions tokenBalanceUpdate 1`] = `
Object {
  "balance": Object {
    "allowance": 456,
    "balance": 123,
  },
  "code": "code",
  "type": "tokenBalance",
}
`;
